# finops-lib

./: .gitignore  README.md  budgets.json  cleanup.ps1  costs.csv  install_commands.txt  optimization_report.txt  pyproject.toml  requirements.txt  reset_env.ps1  run.ps1
azure_finops_cli/: .gitignore  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
azure_finops_cli/azure_finops_lib/: __init__.py  azure.py  cli.py  metrics.py  scoring.py  web.py
azure_finops_cli/azure_finops_lib/templates/: index.html
azure_finops_cli/azure_finops_lib/test_data/: budget_sample.json  cost_management_sample.json
azure_finops_cli/grafana/dashboards/: azure_costs.json  azure_finops.json
azure_finops_cli/grafana/provisioning/dashboards/: azure_finops.yml
docs/: new_commands.md  visualization.md
documentation/: case_studies.md  competitive_analysis.md  development_roadmap.md  finops_requirements.md  finops_research.md  key_features.md  publishing_documentation.md  technical_design.md
finops_lib/: __init__.py  anomaly.py  auth_utils.py  aws.py  azure.py  base.py  cli.py  config.json  config.py  forecast.py  gcp.py  optimize.py  recommendations.py  reporting.py  scoring.py  sustainability.py  visualization.py  web.py
finops_lib/dashboard/: __init__.py  cost_analysis.py  dashboard.py  dashboard_server.py  resource_analysis.py  sustainability.py
finops_lib/templates/: index.html
tests/test_commands/: __init__.py  test_new_commands.py
