[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "az-finops-cli"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A CLI tool for Azure FinOps cost management and optimization"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=2.0.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "azure-mgmt-costmanagement>=3.0.0",
    "azure-identity>=1.7.0",
    "python-dateutil>=2.8.2",
    "prometheus-client>=0.16.0",
    "APScheduler>=3.10.0"
]

[project.scripts]
az-finops-cli = "azure_finops_lib.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["azure_finops_lib"] 